--- a/build.config
+++ b/build.config
@@ -27,7 +27,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_USB=y
 
 ### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
-CONFIG_FIRMWARE_ENABLE_UFSD=y
+#CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
 #CONFIG_FIRMWARE_ENABLE_FAT=y
@@ -227,10 +227,10 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 #CONFIG_FIRMWARE_INCLUDE_DNSCRYPT=y
 
 ### Include Stubby DNS-over-TLS (DoT) ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_STUBBY=y
+#CONFIG_FIRMWARE_INCLUDE_STUBBY=y
 
 ### Include doh_proxy DNS-over-HTTPS (DoH) ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_DOH=y
+#CONFIG_FIRMWARE_INCLUDE_DOH=y
 
 ### Include WPAD support
 #CONFIG_FIRMWARE_INCLUDE_WPAD=y
